--- a/fore-end/src/styles/base.scss
+++ b/fore-end/src/styles/base.scss
@@ -2,3 +2,13 @@
 
 @import './common/reset.scss';
 @import './common/var.scss';
+
+html, body {
+  height: 100%;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
